Solve a problem of tabs jumping on two lines for small screens (comparison tool)

--- a/memi/memi-web/src/main/webapp/css/default.css
+++ b/memi/memi-web/src/main/webapp/css/default.css
@@ -1983,6 +1983,7 @@ table.result tbody td.table_xs_text {word-break: break-all; /*break long charact
 [class*='col-'] {width:100%; margin-bottom: 9px;}
 #bars .rChart {width:100%;}
 #pca .rChart {width:100%;}
+.ui-tabs .ui-tabs-nav .ui-tabs-anchor {padding: 2px;}/*comp. tool - reduce space around tabs icon*/
 }
 /*login window only*/
 @media (max-width: 1000px) {
